# himrep

doxygen/: generate.txt
doxygen/doc/html/: DictionaryLearning_8cpp_source.html  DictionaryLearning_8h_source.html  SVMLinear_8cpp_source.html  SVMLinear_8h_source.html  SVMNonLin_8cpp_source.html  SVMNonLin_8h_source.html  SiftGPU__Extractor_8cpp_source.html  SiftGPU__Extractor_8h_source.html  dir_0d4ffddeea3200b1e76c3b34c505ad92.html  dir_35501fdac143fccee38a09bee6c8d2da.html  dir_450f4e14c121c7353d5681dddc1704f8.html  dir_7415fe13f9036a555c1eb1c32c720325.html  dir_eedbbdfc5700622d414b419463b3063b.html  files.html  group__icub__linearClassifier.html  group__icub__sparseCoder.html  index.html  linearClassifierModule_2src_2main_8cpp_source.html  linearClassifierModule_8cpp_source.html  linearClassifierModule_8h_source.html  linearClassifierThread_8cpp_source.html  linearClassifierThread_8h_source.html  modules.html  sparseCoder_2src_2main_8cpp_source.html  win__dirent_8h_source.html
doxygen/doc/html/search/: search.js
doxygen/doc/latex/: dir_0d4ffddeea3200b1e76c3b34c505ad92.tex  dir_35501fdac143fccee38a09bee6c8d2da.tex  dir_450f4e14c121c7353d5681dddc1704f8.tex  dir_7415fe13f9036a555c1eb1c32c720325.tex  dir_eedbbdfc5700622d414b419463b3063b.tex  group__icub__linearClassifier.tex  group__icub__sparseCoder.tex  refman.tex
modules/: CMakeLists.txt
modules/faster-rcnn_tensorrt/: CMakeLists.txt
modules/faster-rcnn_tensorrt/app/conf/: faster-rcnn_tensorrt.ini  labels20.txt  prova.prototxt
modules/faster-rcnn_tensorrt/src/: CMakeLists.txt  PluginFactory.h  Reshape.h  faster-rcnn.cpp  fasterRCNNtensorRTExtractor.cpp  fasterRCNNtensorRTExtractor.h  main.cpp  tmp.txt
